# mast3r-runtime

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  PROJECT.md  README.md  benchmark_all_models.py  benchmark_fp16.py  benchmark_full.py  benchmark_mpsgraph.py  pyproject.toml  test_all_models.py  test_inference.py  test_retrieval.py
csrc/common/: CMakeLists.txt  model_loader.cpp  model_loader.hpp  safetensors.hpp  types.cpp  types.hpp
csrc/cpu/: CMakeLists.txt  attention.cpp  bindings.cpp  cpu_engine.cpp  cpu_engine.hpp  matching.cpp  preprocessing.cpp  preprocessing.hpp
csrc/cuda/: CMakeLists.txt  attention.cu  bindings.cpp  cuda_engine.cu  cuda_engine.hpp  matching.cu  preprocessing.cu
csrc/jetson/: CMakeLists.txt  bindings.cpp  dla_utils.cpp  jetson_engine.cpp  jetson_engine.hpp  trt_builder.cpp
csrc/metal/: CMakeLists.txt  bindings.mm  metal_context.hpp  metal_context.mm  metal_engine.hpp  metal_engine.mm  vit_buffers.hpp  vit_buffers.mm
csrc/metal/shaders/: attention.metal  dpt_heads.metal  flash_attention.metal  matching.metal  preprocessing.metal  topk_sort.metal  vit.metal
csrc/mps/: CMakeLists.txt  bindings.mm  decoder_graph.hpp  decoder_graph.mm  encoder_graph.hpp  encoder_graph.mm  gpu_tensor.hpp  gpu_tensor.mm  graph_builder.hpp  mast3r_graph.h  mpsgraph_context.hpp  mpsgraph_context.mm  mpsgraph_engine.hpp  mpsgraph_engine.mm  test_e2e.mm  test_local_features.mm  test_sdpa.mm  whitening_graph.hpp  whitening_graph.mm
csrc/mpsgraph/: CMakeLists.txt  bindings.mm  mast3r_graph.mm  mpsgraph_engine.h  mpsgraph_engine.hpp  test_dpt.mm  test_encoder.mm  test_full.mm  test_pipeline.mm
docs/: METAL_BACKEND.md
mast3r_runtime/: __init__.py  cli.py  engine.py
mast3r_runtime/backends/: __init__.py  matching.py  native_wrapper.py
mast3r_runtime/backends/coreml/: __init__.py
mast3r_runtime/backends/onnx/: __init__.py  onnx_engine.py
mast3r_runtime/backends/python/: __init__.py  croco_decoder.py  croco_encoder.py  decoder.py  dpt_head.py  dune_model.py  mast3r_model.py  python_engine.py  rope2d.py  vit_encoder.py
mast3r_runtime/backends/pytorch/: __init__.py  torch_engine.py
mast3r_runtime/backends/tensorrt/: __init__.py
mast3r_runtime/core/: __init__.py  config.py  engine_interface.py  preprocessing.py
mast3r_runtime/scripts/: __init__.py  benchmark.py  download.py  export.py  info.py
mast3r_runtime/utils/: __init__.py  convert.py  downloader.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_backends.py  test_cli.py  test_convert.py  test_downloader.py  test_python_engine.py
tests/unit/: __init__.py  test_config.py  test_engine_interface.py  test_matching.py  test_package.py  test_preprocessing.py
