# MASt3R Runtime - PyPI Package Configuration
# Copyright 2024 Delanoe Pirard / Aedelon. Apache 2.0.

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "mast3r-runtime"
version = "0.1.0"
description = "Optimized inference runtime for MASt3R/DUNE 3D vision models on embedded platforms"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Delanoe Pirard", email = "delanoe@aedelon.com" }]
maintainers = [{ name = "Delanoe Pirard", email = "delanoe@aedelon.com" }]
requires-python = ">=3.10"

keywords = [
    "mast3r",
    "dune",
    "dust3r",
    "3d-vision",
    "stereo-matching",
    "depth-estimation",
    "slam",
    "robotics",
    "drone",
    "embedded",
    "coreml",
    "tensorrt",
    "metal",
    "cuda",
    "inference",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Typing :: Typed",
]

# Minimal dependencies for core functionality
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "tqdm>=4.60",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
# Development
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.8",
    "pre-commit>=3.0",
]

# Export tools (requires PyTorch + MASt3R)
export = [
    "torch>=2.0",
    "torchvision>=0.15",
    "safetensors>=0.4",
]

# All development tools
all = [
    "mast3r-runtime[dev,export]",
]

[project.urls]
Homepage = "https://github.com/aedelon/mast3r-runtime"
Documentation = "https://github.com/aedelon/mast3r-runtime#readme"
Repository = "https://github.com/aedelon/mast3r-runtime"
Issues = "https://github.com/aedelon/mast3r-runtime/issues"
Changelog = "https://github.com/aedelon/mast3r-runtime/blob/main/CHANGELOG.md"

[project.scripts]
mast3r-download = "mast3r_runtime.scripts.download:main"
mast3r-export = "mast3r_runtime.scripts.export:main"
mast3r-benchmark = "mast3r_runtime.scripts.benchmark:main"
mast3r-info = "mast3r_runtime.scripts.info:main"

# ============================================================================
# scikit-build-core configuration
# ============================================================================

[tool.scikit-build]
cmake.build-type = "Release"
cmake.verbose = false
wheel.packages = ["mast3r_runtime"]

# Install compiled extensions to backends/
wheel.install-dir = "mast3r_runtime/backends"

# Minimum CMake version
cmake.minimum-version = "3.21"

# Build directory
build-dir = "build/{wheel_tag}"

# ============================================================================
# Platform-specific CMake configuration
# ============================================================================

# macOS Apple Silicon - build Metal + CPU
[[tool.scikit-build.overrides]]
if.platform-system = "darwin"
if.platform-machine = "arm64"
cmake.args = ["-DBUILD_METAL=ON", "-DBUILD_CPU=ON", "-DBUILD_CUDA=OFF", "-DBUILD_JETSON=OFF"]

# macOS Intel - build CPU only
[[tool.scikit-build.overrides]]
if.platform-system = "darwin"
if.platform-machine = "x86_64"
cmake.args = ["-DBUILD_METAL=OFF", "-DBUILD_CPU=ON", "-DBUILD_CUDA=OFF", "-DBUILD_JETSON=OFF"]

# Linux x86_64 - build CUDA + CPU
[[tool.scikit-build.overrides]]
if.platform-system = "linux"
if.platform-machine = "x86_64"
cmake.args = ["-DBUILD_METAL=OFF", "-DBUILD_CPU=ON", "-DBUILD_CUDA=ON", "-DBUILD_JETSON=OFF"]

# Linux aarch64 (Jetson) - build Jetson + CUDA
[[tool.scikit-build.overrides]]
if.platform-system = "linux"
if.platform-machine = "aarch64"
cmake.args = ["-DBUILD_METAL=OFF", "-DBUILD_CPU=ON", "-DBUILD_CUDA=ON", "-DBUILD_JETSON=ON"]

# ============================================================================
# Ruff configuration
# ============================================================================

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "N", "RUF", "SIM", "UP", "W"]
ignore = ["B008", "B905", "E501", "N803", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["mast3r_runtime"]

# ============================================================================
# Mypy configuration
# ============================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# ============================================================================
# Pytest configuration
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
