# MASt3R Runtime - PyPI Package Configuration
# Copyright 2024 Delanoe Pirard / Aedelon. Apache 2.0.

[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12", "cmake>=3.21", "ninja"]
build-backend = "scikit_build_core.build"

[project]
name = "mast3r-runtime"
version = "0.1.0"
description = "Optimized inference runtime for MASt3R/DUNE 3D vision models on embedded platforms"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Delanoe Pirard", email = "delanoe@aedelon.com" }]
maintainers = [{ name = "Delanoe Pirard", email = "delanoe@aedelon.com" }]
requires-python = ">=3.10"

keywords = [
    "mast3r",
    "dune",
    "dust3r",
    "3d-vision",
    "stereo-matching",
    "depth-estimation",
    "slam",
    "robotics",
    "drone",
    "embedded",
    "coreml",
    "tensorrt",
    "metal",
    "cuda",
    "inference",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Typing :: Typed",
]

# Minimal dependencies for core functionality
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "torch>=2.9.1",
]

[project.optional-dependencies]
# Development
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.8",
    "pre-commit>=3.0",
]

# Export tools (requires PyTorch + MASt3R)
export = [
    "safetensors>=0.4",
]

# All development tools
all = [
    "mast3r-runtime[dev,export]",
]

[project.urls]
Homepage = "https://github.com/aedelon/mast3r-runtime"
Documentation = "https://github.com/aedelon/mast3r-runtime#readme"
Repository = "https://github.com/aedelon/mast3r-runtime"
Issues = "https://github.com/aedelon/mast3r-runtime/issues"
Changelog = "https://github.com/aedelon/mast3r-runtime/blob/main/CHANGELOG.md"

[project.scripts]
mast3r-runtime = "mast3r_runtime.cli:main"

# ============================================================================
# scikit-build-core configuration
# ============================================================================

[tool.scikit-build]
# Minimum CMake version
cmake.version = ">=3.21"

# CMake configuration
cmake.args = [
    "-DBUILD_TESTS=OFF",
    "-DBUILD_MPS=ON",
]

# Build directory
build-dir = "build/{wheel_tag}"

# Wheel configuration - include Python package + native extensions
wheel.packages = ["mast3r_runtime"]

# Build in parallel
[tool.scikit-build.ninja]
make-fallback = true

# Editable installs
[tool.scikit-build.editable]
mode = "redirect"
rebuild = false
verbose = false

# ============================================================================
# Ruff configuration
# ============================================================================

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "N", "RUF", "SIM", "UP", "W"]
ignore = ["B008", "B905", "E501", "N803", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["mast3r_runtime"]

# ============================================================================
# Mypy configuration
# ============================================================================

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# ============================================================================
# Pytest configuration
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["mast3r_runtime"]
omit = [
    # Backends not yet implemented
    "mast3r_runtime/backends/onnx/*",
    "mast3r_runtime/backends/coreml/*",
    "mast3r_runtime/backends/tensorrt/*",
    # Alternative engine API (not primary)
    "mast3r_runtime/engine.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
